<resources>
    <string name="app_name">OurProject</string>
    <string name="task_name_hint">Название</string>
    <string name="task_date_hint">Дата (дд.мм.гггг)</string>
    <string name="save_button">Сохранить</string>
    <string name="add_task">Добавить задачу</string>
    <string name="task_title_sample">Task title</string>
    <string name="my_day">☀ My Day</string>
    <string name="edit_hint">Edit</string>
    <string name="go_back_hint">Назад</string>
    <string name="go_account_hint">Аккаунт</string>
    <string name="account_hint">Аккаунт</string>
    <string name="entire_button">Войти</string>
    <string name="email_field">Почта</string>
    <string name="password_field">Пароль</string>
</resources>