<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:padding="16dp"
    tools:context=".ui.AddEditTaskFragment">

    <ImageButton
        android:id="@+id/buttonGoBack"
        style="@style/CustomIconButton"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/go_back_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editName"
        style="@style/CustomEditText"
        android:hint="@string/task_name_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoBack"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editDate"
        style="@style/CustomEditText"
        android:hint="@string/task_date_hint"
        android:inputType="date"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/editName"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/calendarView"
        style="@style/CustomEditText"
        app:layout_constraintTop_toBottomOf="@id/editDate"
        tools:ignore="MissingConstraints">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_submit_selector"
        android:enabled="false"
        android:paddingVertical="8dp"
        android:text="@string/save_button"
        android:textColor="@color/button_text_selector"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />
</androidx.constraintlayout.widget.ConstraintLayout>